chore: add missing color variable, fix course card price font-size

--- a/themes/Integrative Nutrition/css-style-guide/objects/_layout.css
+++ b/themes/Integrative Nutrition/css-style-guide/objects/_layout.css
@@ -192,7 +192,6 @@
 @media (min-width: 768px) and (max-width: 1139px) {
   .row-fluid {
     width: 100%;
-    zoom: 1;
   }
 
   .row-fluid::before,
